refactor: ApplicationTest의 이름에_대한_예외_처리()메소드를 처리하기 위해 에러메시지 일부 삭제